# IM_Demo

./: COMPLETE_OPTIMIZATION_GUIDE.js  CONTRIBUTING.md  OPTIMIZED_API_USAGE.js  README.md  package-lock.json  package.json  playwright.config.ts  prd.md  share-dev.sh  start-frontend-share.sh  tech_stack.md
backend/: .coverage  README.md  pyproject.toml  supabase_setup.sql  test_citations.py  verify_ids.py
backend/data/storage/60f0831b-0f82-49da-83b6-af7fae3b1cef/files/: Financial Model.xlsx
backend/data/storage/f27d7ce5-e7ad-44b5-afb1-471f269f5c98/files/: Investment_Memorandum.docx
backend/doc/: README.md  api_endpoints.md  architecture.md  business_unit_model.md  development_guide.md  services_deep_dive.md
backend/src/backend/app/: config.py  logging.py  main.py
backend/src/backend/app/api/: README.md  business_unit_routes.py  im_routes.py
backend/src/backend/app/models/: schema.py
backend/src/backend/app/prompts/im_synthesis/: global_config.json
backend/src/backend/app/prompts/im_synthesis/sections/: 01_adani_overview.json  02_adani_structure.json  03_competitive_strengths.json  04_project_overview.json  05_trans_overview.json  (+31 more)
backend/src/backend/app/services/: README.md  docx_service.py  drive_service.py  extraction_service.py  im_service.py  ingestion_service.py  normalization_service.py  pdf_service.py  rag_service.py  reconciliation_service.py  storage_service.py  supabase_service.py  vertex_service.py
backend/src/backend/app/services/reconciliation/: conflict_detector.py  schema_aligner.py
backend/src/backend/app/templates/: im_templates.py
(+37 files in other folders)
